@@ -1,3 +1,12 @@
+2009-04-15  Götz Waschk  <waschk@mandriva.org>
+
+	Bug 550231 – missing dep on libffi in pygobject-2.0.pc
+
+	* configure.ac: Define `LIBFFI_PC' subst.
+
+	* pygobject-2.0.pc.in:
+	* pygobject-2.0-uninstalled.pc.in: Use it.
+
 2009-04-15  Paul Pogonyshev  <pogonyshev@gmx.net>
 
 	Bug 555613 – gio.VolumeMonitor segfaults
